@@ -1,3 +1,13 @@
+2007-11-05  Mark Rowe  <mrowe@apple.com>
+
+        Rubber-stamped by Alp Toker.
+
+        Remove buggy "autocomplete" from GtkLauncher as it causes more problems than it solves.
+
+        * GtkLauncher/main.cpp:
+        (goToURLBarText):
+        (main):
+
 2007-11-04  David D. Kilzer  <ddkilzer@webkit.org>
 
         bisect-builds doesn't work with nightly build r19992 or newer on Leopard
